@@ -2,6 +2,7 @@
 -------------------
  - Fix error when rendering choice elements with have sequences as children, 
    see #150
+ - Re-use credentials passed to python -mzeep <wsdl> (#130)
 
 
 0.15.0 (2016-09-04)
